syntax = "proto3";

package service;

option go_package = "github.com/Iamnotagenius/test/db/service";

service DatabaseTest {
    // Retrieve user from database
    rpc GetUserById (UserByIdRequest) returns (User);
    rpc AddOrUpdateUser (User) returns (UpdateResponse);
    rpc SearchUsersByName (SearchByNameRequest) returns (stream User);
}

message User {
    int64 id = 1;
    string name = 2;
    optional string phone_number = 3;
    Role role = 4;
}

// Self descriptive
message UserByIdRequest {
    int64 id = 1;
}

// Response type for update method
message UpdateResponse {
}

// Search users by name in database
message SearchByNameRequest {
    string query = 1;
}

// Role (admins can use REST api)
enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_READ_ONLY_ADMIN = 2;
    ROLE_READ_WRITE_ADMIN = 3;
}
